unified-directory-structure/modules-main-service/security-group/main.tf
# modules/security_group/main.tf
resource "aws_security_group" "main" {
  name        = var.security_group_name
  description = "Security group for EC2 instances"

  vpc_id = var.vpc_id

  # Define security group rules
     ingress {
     from_port   = 22
     to_port     = 22
     protocol    = "tcp"
     cidr_blocks = ["0.0.0.0/0"]
   }
   
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
